[package]
name = "avm1-decompiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dprint = "0.35.3"
dprint-plugin-typescript = "0.84.0"
binary-reader = "0.4.5"
itertools = "0.10.5"
serde_json = "1.0.95"
clap = { version = "4.2.1", features = ["derive"] }
byteorder = "1.4.3"
swf = "0.2.0"
